[package]
name = "lifeshot-io"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[dependencies]
geng = { git = "https://gitlab.com/kuviman/geng" }
serde = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "*"