[package]
name = "lifeshot-io"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[dependencies]
geng = "0.3"
serde = "1"
structopt = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"