[package]
name = "net"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[dependencies]
geng = { git = "https://gitlab.com/kuviman/geng" }
url = "*"
log = "*"
serde_json = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws = "*"